--- a/client/.gitignore
+++ b/client/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+#firebase
+.firebaserc
+firebase.json
+firestore.indexes.json
+firestore.rules
+hosting.cHVibGlj.cache
+hosting.ZGlzdA.cache
